Made and ran detector for cvs graph with log or inverse scale

--- a/analysis/cvs_detector.ipynb
+++ b/analysis/cvs_detector.ipynb
@@ -49,8 +49,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The file beers_log_files_per_student.txt has been unpickled and loaded\n",
-      "The file capacitor_log_files_per_student.txt has been unpickled and loaded\n"
+      "The file Sarah_beers_log_files_per_student.txt has been unpickled and loaded\n",
+      "The file Sarah_capacitor_log_files_per_student.txt has been unpickled and loaded\n"
      ]
     }
    ],
@@ -1241,18 +1241,324 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Detect use of scale for Separation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def detect_cvs_quant_scale_in_graph(table,x_axis,y_axis,x_scale,y_scale,scale):\n",
+    "    points = get_pts(table,in_graph=True) #grab all points\n",
+    "    cvs_variable = {\"Battery voltage\":0,\n",
+    "                        \"Area\":0,\n",
+    "                        \"Separation\":0,\n",
+    "                        \"Width\":0,\n",
+    "                        \"Wavelength\":0,\n",
+    "                        \"Concentration\":0}\n",
+    "    #check that outcome variable as one of the axes\n",
+    "    \n",
+    "    if x_axis not in [\"charge\",\"absorbance\"] and y_axis not in [\"charge\",\"absorbance\"]:\n",
+    "        return cvs_variable\n",
+    "    \n",
+    "    values = get_values_per_variable(points)\n",
+    "    confounded = pts_are_confounded(values)\n",
+    "    if not confounded and 0 not in values[\"Laser toggle\"] and \"LIGHT_BULB_CONNECTED\" not in values[\"Connection\"]:\n",
+    "        #find the variable being changed\n",
+    "        for v,vals in values.iteritems():\n",
+    "            if len(vals) > 1:\n",
+    "                #check that variable being varied is in one of the axes and that the scale is the one\n",
+    "                # are interested in\n",
+    "                if convert_axis[v] in [x_axis,y_axis] and scale in [x_scale,y_scale]:\n",
+    "                    cvs_variable[v] = len(vals)\n",
+    "                    return cvs_variable\n",
+    "    return cvs_variable\n",
+    "\n",
+    "\n",
+    "def get_cvs_scale_in_graph(df,scale):\n",
+    "    ''' For a certain scale (linear, log, inverse), detect if CVS graph was done with the variable plotted using that scale'''\n",
+    "    tables_with_axes_scales = set(zip(df['Table'], df['X axis'], df['Y axis'], df['X axis scale'], df['Y axis scale']))\n",
+    "    cvs_final = {\"Battery voltage\":0,\n",
+    "                        \"Area\":0,\n",
+    "                        \"Separation\":0,\n",
+    "                        \"Width\":0,\n",
+    "                        \"Wavelength\":0,\n",
+    "                        \"Concentration\":0}\n",
+    "    for t,x_axis,y_axis,x_scale,y_scale in tables_with_axes_scales:\n",
+    "        table = read_table(t)\n",
+    "        cvs_final = {k:max(v,detect_cvs_quant_scale_in_graph(table,x_axis,y_axis,x_scale,y_scale,scale)[k]) for k,v in cvs_final.iteritems()}\n",
+    "    return cvs_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = get_students_to_analyze_log()\n",
+    "graph_scale_cvs_df = pd.DataFrame(index =ids, columns = ['Battery voltage', 'Area', 'Separation','Wavelength','Width', 'Concentration'])\n",
+    "graph_scale_cvs_df = graph_scale_cvs_df.fillna(0)\n",
+    "graph_scale_cvs_df.index.name = 'studentid'\n",
+    "for c in graph_scale_cvs_df.columns:\n",
+    "    graph_scale_cvs_df[[c]] = graph_scale_cvs_df[[c]].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%aimport utils_read_parsing\n",
+    "for sim in ['beers','capacitor']:\n",
+    "    log_files = log_files_per_sim[sim]\n",
+    "    for sid,logs in log_files.iteritems():\n",
+    "#         if sid in [11929166,19989152,19436162]:\n",
+    "        cvs_all_logs_graph = {\"Battery voltage\":0,\"Area\":0,\"Separation\":0,\"Width\":0,\"Wavelength\":0,\"Concentration\":0}\n",
+    "        #for each log file\n",
+    "#             print sim, sid, len(logs)\n",
+    "        for log in logs:\n",
+    "            df = prep_parsing_data(log)\n",
+    "            if not df.empty:\n",
+    "                #we find the instances of CVS in this log file\n",
+    "#                     cvs_table,intervals_table = get_cvs_per_variable_in_table(df)\n",
+    "                cvs_scale_graph = get_cvs_scale_in_graph(df,'inverse')\n",
+    "                #we append them to a summary cvs\n",
+    "#                     intervals_all_logs_table = {k:max(v,intervals_table[k]) for k,v in intervals_all_logs_table.iteritems()}\n",
+    "#                 cvs_all_logs_table = {k:max(v,cvs_table[k]) for k,v in cvs_all_logs_table.iteritems()}\n",
+    "                cvs_all_logs_graph = {k:max(v,cvs_scale_graph[k]) for k,v in cvs_all_logs_graph.iteritems()}\n",
+    "            else:\n",
+    "                print sid, log\n",
+    "        #now we save to the data to our mega df\n",
+    "#         for var, n_samples in cvs_all_logs_table.iteritems():\n",
+    "#             if n_samples >0:\n",
+    "#                 table_cvs_df.set_value(sid, var, n_samples)\n",
+    "        for var, n_samples in cvs_all_logs_graph.iteritems():\n",
+    "            if n_samples >0:\n",
+    "                graph_scale_cvs_df.set_value(sid, var, n_samples)\n",
+    "#             for var, used_intervals in intervals_all_logs_table.iteritems():\n",
+    "#                 if used_intervals:\n",
+    "#                     table_intervals_df.set_value(sid, var, used_intervals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Battery voltage</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Separation</th>\n",
+       "      <th>Wavelength</th>\n",
+       "      <th>Width</th>\n",
+       "      <th>Concentration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>studentid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11929166</th>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19436162</th>\n",
+       "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19989152</th>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Battery voltage  Area  Separation  Wavelength  Width  Concentration\n",
+       "studentid                                                                     \n",
+       "11929166                 0     9           8           0      0              8\n",
+       "19436162                 7    11          15          15      0              8\n",
+       "19989152                 0    11           9           0      0              0"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_scale_cvs_df[graph_scale_cvs_df.index.isin([11929166,19989152,19436162])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Battery voltage</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Separation</th>\n",
+       "      <th>Wavelength</th>\n",
+       "      <th>Width</th>\n",
+       "      <th>Concentration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>studentid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11612162</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13660166</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41947147</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64006159</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15749160</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Battery voltage  Area  Separation  Wavelength  Width  Concentration\n",
+       "studentid                                                                     \n",
+       "11612162                 0     0           0           0      0              0\n",
+       "13660166                 0     0           0           0      0              0\n",
+       "41947147                 0     0           0           0      0              0\n",
+       "64006159                 0     0           0           0      0              0\n",
+       "15749160                 0     0           0           0      0              0"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_scale_cvs_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_scale_cvs_df.to_csv('graph_inverse_cvs_df.txt', sep='\\t')"
+   ]
   }
  ],
  "metadata": {
