Finished detecting non consecutive CVS in table

--- a/analysis/cvs_detector.ipynb
+++ b/analysis/cvs_detector.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -43,14 +45,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The file Sarah_beers_log_files_per_student.txt has been unpickled and loaded\n",
-      "The file Sarah_capacitor_log_files_per_student.txt has been unpickled and loaded\n"
+      "The file sperez8_beers_log_files_per_student.txt has been unpickled and loaded\n",
+      "The file sperez8_capacitor_log_files_per_student.txt has been unpickled and loaded\n"
      ]
     }
    ],
@@ -72,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_use_table(df):\n",
@@ -144,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_outcome_values(pts):\n",
@@ -270,7 +278,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "collapsed": false
    },
    "outputs": [
     {
@@ -309,28 +318,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Pause', 'changed connection', 'dragEnded', 'dragStarted', 'dragged'}"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(df['Event'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%aimport utils_timeline_viz\n",
@@ -360,8 +351,10 @@
     "\n",
     "    #if there is CVS points for a variable, this is the max number of points it has.\n",
     "    max_number_pts_CVS = max([len(vals) for v,vals in get_values_per_variable(points).iteritems()])\n",
-    "#     for NUM in range(2, max(3,max_number_pts_CVS)+1):\n",
-    "    for NUM in [4]:\n",
+    "    if max_number_pts_CVS <2:\n",
+    "        return cvs_variable\n",
+    "    for NUM in range(2, min(4,max_number_pts_CVS)+1):\n",
+    "#     for NUM in [2,3,4]:\n",
     "        for group_of_points in itertools.product(points, repeat=NUM):\n",
     "            values = get_values_per_variable(group_of_points)\n",
     "            if max([len(vals) for v,vals in values.iteritems()]) >= NUM:\n",
@@ -405,8 +398,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "convert_axis = {\"Absorbance\":\"absorbance\",\"Concentration\":\"concentration\",\"Width\":\"cuvetteWidth\",\"Wavelength\":\"trialNumber\",\"Battery voltage\":\"trialNumber\",\"Area\":\"area\",\"Separation\":\"separation\",\"Charge\":\"charge\"}\n",
@@ -464,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -582,7 +579,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -651,7 +650,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -707,7 +708,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -781,7 +784,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -910,7 +915,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -973,7 +980,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1042,26 +1051,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -1134,24 +1132,16 @@
        "</div>"
       ],
       "text/plain": [
-       "           Battery voltage   Area  Separation  Wavelength  Width  \\\n",
-       "studentid                                                          \n",
-       "11612162             False  False       False       False  False   \n",
-       "13660166             False  False       False       False  False   \n",
-       "41947147             False  False       False       False  False   \n",
-       "64006159             False  False       False       False  False   \n",
-       "15749160             False  False       False       False  False   \n",
-       "\n",
-       "           Concentration  \n",
-       "studentid                 \n",
-       "11612162           False  \n",
-       "13660166           False  \n",
-       "41947147           False  \n",
-       "64006159           False  \n",
-       "15749160           False  "
+       "          Battery voltage   Area Separation Wavelength  Width Concentration\n",
+       "studentid                                                                  \n",
+       "11612162            False  False      False      False  False         False\n",
+       "13660166            False  False      False      False  False         False\n",
+       "41947147            False  False      False      False  False         False\n",
+       "64006159            False  False      False      False  False         False\n",
+       "15749160            False  False      False      False  False         False"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,14 +1163,313 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20751.9325915\n"
+      "29.9143635769\n",
+      "0.366631389316\n",
+      "7.38499140907\n",
+      "111.478790122\n",
+      "0.456701529464\n",
+      "2.4381890705\n",
+      "159.510703647\n",
+      "0.468248271249\n",
+      "3.52396404729\n",
+      "0.351731890524\n",
+      "0.441988881899\n",
+      "7.19442760737\n",
+      "2.56436617286\n",
+      "93.0387793272\n",
+      "5.24728114861\n",
+      "1.02732133219\n",
+      "1.39010099022\n",
+      "1.35945104981\n",
+      "13.3529716288\n",
+      "7134.92705648\n",
+      "0.564445561997\n",
+      "1.45847103172\n",
+      "7.31815360801\n",
+      "0.462681976191\n",
+      "3.78145258567\n",
+      "325.326976669\n",
+      "1.81040969622\n",
+      "0.811116350056\n",
+      "171.908179677\n",
+      "6.35414616535\n",
+      "2.68954653411\n",
+      "0.373840103648\n",
+      "1.68675221776\n",
+      "0.380880983917\n",
+      "0.635121208792\n",
+      "0.338689433336\n",
+      "12.789483868\n",
+      "15.2432854302\n",
+      "0.955093522209\n",
+      "0.455817683915\n",
+      "0.994697228565\n",
+      "4.59166063953\n",
+      "1.81145443305\n",
+      "5.27376723469\n",
+      "0.835528961034\n",
+      "64.1792334934\n",
+      "6.4541109685\n",
+      "0.605657577467\n",
+      "5.50771402767\n",
+      "242.801973016\n",
+      "1.1478216588\n",
+      "3.92208183057\n",
+      "2.19214705644\n",
+      "0.839009706606\n",
+      "10.0547670306\n",
+      "0.427306722177\n",
+      "0.695721982276\n",
+      "1.30920165322\n",
+      "3.04884906888\n",
+      "284.172749544\n",
+      "10.0510025368\n",
+      "1.14516438682\n",
+      "0.958768363642\n",
+      "2.06467588104\n",
+      "1.83996871525\n",
+      "1.53595995648\n",
+      "3.02567347944\n",
+      "0.944354255438\n",
+      "3.56244634442\n",
+      "39.9506616164\n",
+      "263.56470335\n",
+      "0.339810842563\n",
+      "1.25895135106\n",
+      "0.656886509161\n",
+      "96.6752691684\n",
+      "2.54511325177\n",
+      "1.90927240917\n",
+      "0.476015124385\n",
+      "1.46342696622\n",
+      "0.459246509594\n",
+      "11.1467751108\n",
+      "0.262324634539\n",
+      "1.50871107065\n",
+      "0.352966195322\n",
+      "0.415769338046\n",
+      "1.82835194198\n",
+      "0.459631984584\n",
+      "2.74916324458\n",
+      "5.28073506488\n",
+      "5.1861524223\n",
+      "0.921097767565\n",
+      "88.9071515421\n",
+      "4.30471118656\n",
+      "4.72441738036\n",
+      "0.850081924755\n",
+      "0.658804224589\n",
+      "6.19482817536\n",
+      "3.94881755472\n",
+      "1.27044919156\n",
+      "0.869180293625\n",
+      "0.401147248427\n",
+      "79.4412330249\n",
+      "2.73770404215\n",
+      "0.300228568254\n",
+      "0.470335631895\n",
+      "23.4944602686\n",
+      "13.7536579373\n",
+      "0.447403341466\n",
+      "42.1068076634\n",
+      "387.651488048\n",
+      "3.81078219124\n",
+      "0.337712313103\n",
+      "0.363759495\n",
+      "139.489295749\n",
+      "6.01475188934\n",
+      "0.465289441305\n",
+      "0.890756629748\n",
+      "0.355535324239\n",
+      "12.0443112102\n",
+      "46.1911255628\n",
+      "7.46187721791\n",
+      "5.20611712886\n",
+      "0.430150845388\n",
+      "3.68246339346\n",
+      "0.517522962477\n",
+      "7.60138143127\n",
+      "7.31456147617\n",
+      "0.895057528445\n",
+      "28.3186779385\n",
+      "0.414146237799\n",
+      "113.138140109\n",
+      "4.6987771055\n",
+      "11.8288949878\n",
+      "6.3662558757\n",
+      "15.3863687954\n",
+      "62.6519834001\n",
+      "1.86231630321\n",
+      "2.62132349834\n",
+      "0.67265808097\n",
+      "2.83451229717\n",
+      "5.48578602486\n",
+      "7.56860036054\n",
+      "0.409710407765\n",
+      "0.993811571856\n",
+      "1.93543429779\n",
+      "13.8964572524\n",
+      "7.73763944414\n",
+      "50.4444568878\n",
+      "4.87937168482\n",
+      "0.335353882339\n",
+      "0.370241632747\n",
+      "0.389958814247\n",
+      "0.594051067435\n",
+      "0.304897434071\n",
+      "0.486877851821\n",
+      "0.58973084971\n",
+      "13.5395046963\n",
+      "0.44461777906\n",
+      "12.0515805984\n",
+      "0.627426500152\n",
+      "0.315617381813\n",
+      "0.32263200028\n",
+      "8.91268523628\n",
+      "6.69850694096\n",
+      "0.439813680045\n",
+      "15.8879909901\n",
+      "2.35964786241\n",
+      "3.77269804721\n",
+      "0.585757770777\n",
+      "3.34360340932\n",
+      "0.762057488599\n",
+      "0.391249566832\n",
+      "0.374802432749\n",
+      "0.786144694692\n",
+      "0.370556472539\n",
+      "1.17745463349\n",
+      "13.0633027207\n",
+      "2.40481212849\n",
+      "1.60893486952\n",
+      "0.366197918616\n",
+      "0.407970487768\n",
+      "7.68073705716\n",
+      "0.364952143145\n",
+      "0.350190292429\n",
+      "18.6879222264\n",
+      "0.478211456426\n",
+      "0.48759175029\n",
+      "0.393374659954\n",
+      "0.36904113625\n",
+      "6.95717544938\n",
+      "0.533708082237\n",
+      "1.89641136973\n",
+      "0.676405972477\n",
+      "7.18322740066\n",
+      "1.00392930926\n",
+      "0.406041603528\n",
+      "2.41029511023\n",
+      "0.747322201547\n",
+      "0.343007236183\n",
+      "0.294721135862\n",
+      "0.777635870123\n",
+      "0.387562349146\n",
+      "0.427770680719\n",
+      "0.362892855461\n",
+      "0.465870823316\n",
+      "0.32296374422\n",
+      "4.98846140843\n",
+      "1.4972729984\n",
+      "2.34296316465\n",
+      "0.589679533541\n",
+      "1.17990150918\n",
+      "0.432342649532\n",
+      "1.47549351062\n",
+      "0.467316128128\n",
+      "1.41424736084\n",
+      "1.60271142564\n",
+      "1.74390575212\n",
+      "0.416218203596\n",
+      "689.907707568\n",
+      "0.142858177805\n",
+      "0.306411864782\n",
+      "0.383014529116\n",
+      "2.85794144885\n",
+      "11.8183160086\n",
+      "0.455805911381\n",
+      "0.458123289209\n",
+      "0.427870294458\n",
+      "0.378519836417\n",
+      "0.719271274174\n",
+      "0.310605603243\n",
+      "3.22967970258\n",
+      "0.347836691422\n",
+      "0.426527320124\n",
+      "2.39855095213\n",
+      "0.377236328466\n",
+      "1.48175106466\n",
+      "3.24037006806\n",
+      "0.376201854868\n",
+      "0.339946679482\n",
+      "6.63968744227\n",
+      "1.8144763517\n",
+      "1.82838816516\n",
+      "0.464446648693\n",
+      "3.21397755853\n",
+      "0.882643241539\n",
+      "2.80575230108\n",
+      "0.408599563632\n",
+      "42.9820982035\n",
+      "0.340803659506\n",
+      "15.9625455356\n",
+      "0.415198219269\n",
+      "0.264843051005\n",
+      "0.393156717166\n",
+      "8.78644746009\n",
+      "7.2137276186\n",
+      "0.379090955194\n",
+      "0.349229774487\n",
+      "66.6741399108\n",
+      "1.00097923325\n",
+      "2.26076100068\n",
+      "0.330959708959\n",
+      "0.797614764086\n",
+      "0.465666464219\n",
+      "0.504241432312\n",
+      "1.76902712995\n",
+      "0.36477766817\n",
+      "0.789969862315\n",
+      "0.375662431372\n",
+      "16.1819580801\n",
+      "0.541088252943\n",
+      "0.509236004873\n",
+      "1.00653737809\n",
+      "0.36873988015\n",
+      "0.803069672869\n",
+      "1.26047876175\n",
+      "1.58532430008\n",
+      "0.544929419138\n",
+      "0.574602541175\n",
+      "0.498466250261\n",
+      "8.96336719798\n",
+      "0.706957506589\n",
+      "2.77626391725\n",
+      "9.07402961124\n",
+      "4.0644365062\n",
+      "0.322092274924\n",
+      "46.2114250319\n",
+      "0.78608341715\n",
+      "0.601245292497\n",
+      "2.59809840389\n",
+      "0.683801236177\n",
+      "0.494630819403\n",
+      "0.43451211605\n",
+      "0.782366013482\n",
+      "310.44182135\n",
+      "15.6146203992\n",
+      "155.896411068\n",
+      "TOTAL 12128.4635888\n"
      ]
     }
    ],
@@ -1191,6 +1480,7 @@
     "for sim in ['beers','capacitor']:\n",
     "    log_files = log_files_per_sim[sim]\n",
     "    for sid,logs in log_files.iteritems():\n",
+    "        start_time_byid = timeit.default_timer()\n",
     "#         if sid == 10866146:\n",
     "#         cvs_all_logs_table = {\"Battery voltage\":0,\"Area\":0,\"Separation\":0,\"Width\":0,\"Wavelength\":0,\"Concentration\":0}\n",
     "        cvs_all_logs_table_non_consecutive = {\"Battery voltage\":0,\"Area\":0,\"Separation\":0,\"Width\":0,\"Wavelength\":0,\"Concentration\":0}\n",
@@ -1212,6 +1502,8 @@
     "#                 cvs_all_logs_graph = {k:max(v,cvs_graph[k]) for k,v in cvs_all_logs_graph.iteritems()}\n",
     "            else:\n",
     "                print sid, log\n",
+    "        elapsed_byid = timeit.default_timer() - start_time_byid\n",
+    "        print elapsed_byid\n",
     "        #now we save to the data to our mega df\n",
     "#         for var, n_samples in cvs_all_logs_table.iteritems():\n",
     "#             if n_samples >0:\n",
@@ -1226,16 +1518,18 @@
     "#             if used_intervals:\n",
     "#                 table_intervals_df.set_value(sid, var, used_intervals)\n",
     "elapsed = timeit.default_timer() - start_time\n",
-    "print elapsed"
+    "print \"TOTAL\",elapsed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "table_non_consecutive_cvs_df.to_csv('table_non_consecutive_cvs_results_4.txt', sep='\\t')"
+    "table_non_consecutive_cvs_df.to_csv('table_non_consecutive_cvs_results_2-3-4.txt', sep='\\t')"
    ]
   },
   {
@@ -1266,7 +1560,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1417,7 +1713,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1496,7 +1794,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1607,9 +1907,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Anaconda2]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Anaconda2]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1621,7 +1921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   },
   "toc": {
    "nav_menu": {},
