Updated post survey transfer questions grading for qualitative questions

--- a/analysis/data_log_to_pre_post_surveys_connector.ipynb
+++ b/analysis/data_log_to_pre_post_surveys_connector.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -448,7 +448,7 @@
     "        elif ' | ' in d and 'Page' not in d:\n",
     "            new_columns[i] = c + '-' + d.split(' | ')[1]\n",
     "    posts.columns = new_columns\n",
-    "    posts[\"qual1\"] = posts[\"qual1x\"].ix[:,0].map(str) + posts[\"qual1x\"].ix[:,1].map(str)\n",
+    "    posts[\"qual1\"] = posts[\"qual1x\"].ix[:,0].replace(np.nan, '', regex=True).map(str) + posts[\"qual1x\"].ix[:,1].replace(np.nan, '', regex=True).map(str)\n",
     "    posts.drop([\"qual1x\"],axis=1,inplace=True)\n",
     "\n",
     "    def ids_posts_to_logs(row):\n",
